<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <ImageButton
        android:id="@+id/image_button_screen_shot_floating"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:adjustViewBounds="true"
        android:background="@drawable/shape_round_button_screen_shot"
        android:scaleType="centerInside"
        android:src="@drawable/ic_app_shortcut_24" />
</LinearLayout>