...
            .observeOnLoading {
                performActionWithLoadingIndicator(true)
            }
    }

    private fun setupBalloon(phrase: String) {
        val balloon = Balloon.Builder(this)
            .setWidthRatio(0.90f)
            .setHeight(BalloonSizeSpec.WRAP)
            .setText(phrase)
            .setTextSize(15f)
            .setArrowSize(10)
            .setMarginHorizontal(16)
...
