appId: com.teachmeprint.language
---
- tapOn: "Translate"
- tapOn: "Select"
- tapOn: "Armenian"
- tapOn: "SELECT"
- tapOn: "Translate"
- assertVisible:
    id: animation_screen_shot_loading_translate
- waitForAnimationToEnd
- assertVisible:
    id: balloon
- back
- waitForAnimationToEnd
- back